<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.helpmeout.HomePage">
    
    <TextView 
	    android:id="@+id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="25dip"
	    android:layout_centerHorizontal= "true"
	    android:text= "@string/header"/>
    
    <LinearLayout  
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <ImageView
            android:src="@drawable/image"
            android:layout_width="100dip"
	    	android:layout_height="100dip"
            />
         <LinearLayout  
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	        <TextView 
		    android:id="@+id/name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text= "@string/name"
		    android:layout_marginLeft= "30dip"/>
	        <TextView 
		    android:id="@+id/stats1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text= "@string/jobsComplete"
		    android:layout_marginLeft= "30dip"/>
	        <TextView 
		    android:id="@+id/stats2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text= "@string/currentJobs"
		    android:layout_marginLeft= "30dip"/>
	        <TextView 
		    android:id="@+id/stats3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text= "@string/rank"
		    android:layout_marginLeft= "30dip"/>
	   </LinearLayout>
    </LinearLayout>
   
    <Button 
	    android:id="@+id/getJobButton"
	    android:text="@string/getJobText"
		android:layout_width= "fill_parent"
		android:layout_height= "wrap_content"/>
    <Button 
	    android:id="@+id/postJobButton"
	    android:text="@string/postJobText"
		android:layout_width= "fill_parent"
		android:layout_height= "wrap_content"/>
    <Button 
	    android:id="@+id/myJobsButton"
	    android:text="@string/myJobsText"
		android:layout_width= "fill_parent"
		android:layout_height= "wrap_content"/>
     <Button 
	    android:id="@+id/profileButton"
	    android:text="@string/profileText"
		android:layout_width= "fill_parent"
		android:layout_height= "wrap_content"/>
 

    
 </LinearLayout>