<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >
	<RelativeLayout 
	    
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.helpmeout.PostJob">
		<TextView 
		    android:id="@+id/postJobHeader"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="25sp"
		    android:layout_centerHorizontal= "true"
		    android:text= "@string/header"/>
		<TextView 
		    android:id="@+id/categoryText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/postJobHeader"
		    android:text= "@string/categoryText"/>
		<Spinner 
		    android:id="@+id/categorySpinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/postJobHeader"
		    android:layout_toRightOf="@id/categoryText"/>
		
		<TextView 
		    android:id="@+id/paymentAmount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/categorySpinner"
		    android:text= "@string/paymentText"/>
		<Spinner 
		    android:id="@+id/paymentAmountSpinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/categorySpinner"
		    android:layout_toRightOf="@id/paymentAmount"/>
		
		<TextView 
		    android:id="@+id/meetingLocation"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/paymentAmountSpinner"
		    android:text= "@string/meetingLocationText"/>
		<EditText
		    android:id="@+id/meetingLocationInput"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/locationHint"
		    android:layout_below="@id/paymentAmountSpinner"
		    android:layout_toRightOf="@id/meetingLocation" 
		 />
		
		<TextView 
		    android:id="@+id/description"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/meetingLocationInput"
		    android:text= "@string/descriptionText"/>
		<EditText
		    android:id="@+id/descriptionInput"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/descriptionHint"
		    android:layout_below="@id/meetingLocationInput"
		    android:layout_toRightOf="@id/description" 
		 />
		<TextView 
		    android:id="@+id/time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/descriptionInput"
		    android:text= "@string/timeText"/>
		<TimePicker
		    android:id="@+id/timePicker"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/descriptionInput"
		    android:layout_toRightOf="@id/time" /> 
		<TextView 
		    android:id="@+id/date"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/timePicker"
		    android:text= "@string/dateText"/>
		<DatePicker  android:id="@+id/datePicker"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/date"
		   />
		
		<TextView 
		    android:id="@+id/negotiable"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp"
		    android:layout_below="@id/datePicker"
		    android:text= "@string/negotiableText"/>
		<Spinner 
		    android:id="@+id/negotiableSpinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/datePicker"
		    android:layout_toRightOf="@id/negotiable"/>
		
		<Button 
	    android:id="@+id/homeButton"
	    android:text="@string/homeText"
		android:layout_below="@id/negotiableSpinner"
		android:layout_toStartOf="@id/negotiable"
		android:layout_width= "wrap_content"
		android:layout_height= "wrap_content"/>

	   <Button
	    android:id="@+id/submitButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/negotiableSpinner"
	    android:layout_below="@+id/negotiableSpinner"
	    android:layout_toEndOf="@id/negotiableSpinner"
	    android:text="@string/submitText" />
		   
		    
		</RelativeLayout>
</ScrollView>
