<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helpmeout.MainActivity">
	<TextView 
	    android:id="@+id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="25dip"
	    android:layout_centerHorizontal= "true"
	    android:text= "@string/header"/>
	<EditText
	    android:id="@+id/email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/emailHint"
	    android:layout_below="@id/header"
		android:layout_margin="10dip"    
	    android:inputType="textEmailAddress"/>
	<EditText
	    android:id="@+id/password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/passwordHint"
	    android:layout_below="@id/email"
	    android:layout_margin="10dip" 
	    android:inputType="textPassword" />
	
	<Button 
	    android:id="@+id/signupButton"
	    android:text="@string/signUpText"
		android:layout_below="@id/password"
		android:layout_toStartOf="@id/password"
		android:layout_width= "wrap_content"
		android:layout_height= "wrap_content"/>

	<Button
	    android:id="@+id/loginButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/password"
	    android:layout_below="@+id/password"
	    android:layout_toEndOf="@id/password"
	    android:text="@string/loginText" />

</RelativeLayout>
